--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,12 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: Mah homework page
+
+description: This website is for class.
 
 # Your name to show in the footer
-author: Some Person
+author: Jazzy Landes
 
 # --- List of links in the navigation bar --- #
 
@@ -39,12 +41,12 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+#  email: "someone@example.com"
+#  facebook: deanattali
+  github: jslandes
+#  twitter: daattali
+#  patreon: DeanAttali
+#  youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
@@ -65,20 +67,20 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: This website is a virtual proof that I'm awesome
+rss-description: This website is for class.
 
 # --- General options --- #
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
+  twitter: false
+  facebook: false
+  linkedin: false
   vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -99,16 +101,16 @@ post_search: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+navbar-col: "#344e41"
+navbar-text-col: "#dad7cd"
+navbar-children-col: "#344e41"
+page-col: "#dad7cd"
+text-col: "#344e41"
+link-col: "#588157"
+hover-col: "#a3b18a"
+footer-col: "#344e41"
+footer-text-col: "#dad7cd"
+footer-link-col: "#dad7cd"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
