--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,11 @@
 # Name of website
 title: Mah homework page
 
+# description
 description: This website is for class.
+
+# site url
+url: https://jslandes.github.io/paf-514-website-example
 
 # Your name to show in the footer
 author: Jazzy Landes
