Update _config.yml link color fix 3

--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ navbar-text-col: "#dad7cd"
 navbar-children-col: "#344e41"
 page-col: "#dad7cd"
 text-col: "#344e41"
-link-col: "#A3B18A"
+link-col: "#588157"
 hover-col: "#a3b18a"
 footer-col: "#344e41"
 footer-text-col: "#dad7cd"
